Soybean and Coconut renamed
`soybean` -> `guarbean`
`coconut` -> `calknut`

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -10,7 +10,7 @@ pyv-composter=Composter
 plant-residues=Plant Residues
 plant-residues-dry=Dry Plant Residues
 plant-residues-pellets=Bio-Pellets
-humus=Humus
+biomass=Humus
 pyv-fertilizer=Fertilizer
 pyv-urea=Urea
 morgenroete-endospores=Morgenröte Endospores
@@ -71,9 +71,9 @@ blood-bag=Blood Bag
 
 [item-description]
 pyv-hidden=This is supposed to be hidden. If you can read this, then another mod does not value my privacy.
-compostable=Compostable (yields __1__ humus)
-composting-silo=Compostable organic matter will slowly turn into humus inside it. Is bigger than a composter, but can reach higher speeds and make players desync from servers.
-pyv-composter=Compostable organic matter will slowly turn into humus inside it.
+compostable=Compostable (yields __1__ biomass)
+composting-silo=Compostable organic matter will slowly turn into biomass inside it. Is bigger than a composter, but can reach higher speeds and make players desync from servers.
+pyv-composter=Compostable organic matter will slowly turn into biomass inside it.
 
 tiriscefing-willow=Willow with pale branches that contain a lot of calcium. Kinda creepy at night. 
 calknut-butter=Too impure to eat. 
@@ -287,8 +287,8 @@ composting-silo=Composting Silo
 bio-printer-mk00=Bioprinter MK 00
 
 [entity-description]
-composting-silo=Compostable organic matter will slowly turn into humus inside it. It is bigger than a composter, but can reach higher composting rates.
-pyv-composter=Compostable organic matter will slowly turn into humus inside it.
+composting-silo=Compostable organic matter will slowly turn into biomass inside it. It is bigger than a composter, but can reach higher composting rates.
+pyv-composter=Compostable organic matter will slowly turn into biomass inside it.
 
 [description]
 handcrafting=\n[color=0.7,0.7,0.7][Handcrafting only][/color]
