Guar and Calknut fleshed out

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -22,11 +22,11 @@ oil-palm-fruit-flesh=Oil Palm Fruit Flesh
 oil-palm-kernel=Oil Palm Kernel
 oil-palm-kernel-dry=Dry Oil Palm Kernel
 oil-palm-kernel-open=Cracked Oil Palm Kernel
-calknut=Coconut
+calknut=Calknut
 copra=Copra
 copra-halved=Halved Copra
 copra-halved-dry=Dry Halved Copra
-calknut-butter=Coconut Butter
+calknut-butter=Calknut Butter
 cocoa-fruit=Cocoa Fruits
 cocoa-fruit-washed=Washed Cocoa Fruits
 cocoa-fruit-roasted=Roasted Cocoa Fruits
@@ -36,13 +36,12 @@ canola-seed=Canola Seeds
 canola-seed-dry=Dry Canola Seeds
 canola-seed-peeled=Peeled Canola Seeds
 canola-meal=Canola Meal
-guar-pods=Soy
-guar-pods-washed=Washed Soy Pods
+guar-pods-washed=Washed Guar Pods
 edamame=Edamame
-guarbeans=Soy Beans
+guarbeans=Guar Beans
 tofu-block=Tofu
 tempeh=Tempeh
-guar-meal=Soy Meal
+guar-meal=Guar Meal
 yuba=Yuba
 sugar-beet=Sugar Beet
 sugar-beet-washed=Washed Sugar Beet
@@ -104,7 +103,7 @@ urea-medium=Urea Medium
 sugar-growth-medium=Sugar containing Medium
 impure-palm-oil=Impure Palm Oil
 plant-oil=Plant Oil
-guar-milk=Soy Milk
+guar-milk=Guar Milk
 citric-acid=Citric Acid
 ethanol-solution=Ethanol Solution
 pseudodaemonas-growth-medium=Pseudodaemonas Growth Medium
@@ -166,11 +165,11 @@ refine-palm-oil=Refine Palm Oil
 dry-oil-palm-kernel=Dry Oil Palm Kernels
 open-oil-palm-kernel=Crack Oil Palm Kernels Open
 press-oil-palm-kernel=Press Oil Palm Kernels
-core-calknut=Core Coconuts
+core-calknut=Core Calknuts
 halve-copra=Halve Copra
 dry-copra=Dry Halved Copra
 press-copra=Press Copra
-refine-calknut-butter=Refine Coconut Butter
+refine-calknut-butter=Refine Calknut Butter
 wash-cocoa=Wash Cocoa Fruits
 roast-cocoa=Roast Cocoa Fruits
 skin-cocoa=Skin Cocoa Fruits
@@ -182,11 +181,11 @@ press-canola=Press Canola Seeds
 wash-sugar-beet=Wash Sugar Beets
 refine-sugar-beet=Sugar Refinery
 refine-sugar-cane=Sugar Refinery
-wash-guar=Wash Soy Pods
-core-guar-pods=Core Soy Pods
+wash-guar=Wash Guar Pods
+core-guar=Core Guar Pods
 ripen-edamame=Ripen Edamame
-press-guarbeans=Press Soy Beans
-guar-milk=Soy Milk
+press-guarbeans=Press Guar Beans
+guar-milk=Guar Milk
 tofu=Tofu
 render-cadaver-arum-fruit=Cadaver Arum Rendering
 
