Vrauk molting and Vrauk Frass

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -68,6 +68,9 @@ stool-sample=Stool Sample
 toe-nail-sample=Toe Nail
 blood-bag=Blood Bag
 
+vrauk-molt=Vrauk Molt
+vrauk-frass=Vrauk Frass
+
 [item-description]
 pyv-hidden=This is supposed to be hidden. If you can read this, then another mod does not value my privacy.
 compostable=Compostable (yields __1__ biomass)
@@ -86,7 +89,10 @@ tempeh=My Favorite
 sugar=Your brain wants it. Your body needs it. 
 crystalline-citric-acid=Crystalline
 morgenroete-endospores=Bacteria.zip
-protein=A wild mixture of polypeptides. 
+protein=A wild mixture of polypeptides.
+
+vrauk-molt=The Once-was Exoskeleton of a Vrauk
+vrauk-frass=The poop of a Vrauk
 
 [fluid-name]
 solfaen=Rhodophyta Solfaen
@@ -214,6 +220,10 @@ pseudodaemonas-rocket-fuel=Rocket Fuel from Pseudodaemonas
 
 generate-stool-sample=Generate a Stool Sample
 generate-engineer-blood=Donate Blood
+
+vrauk-molting=Vrauk Molting
+vrauk-frass=Vrauk Frassing
+vrauk-molting-with-frass=Vrauk Molting with Frass
 
 [recipe-description] 
 grow-tiriscefing-willow-2=They love to eat this carbon gas. 
