Gave pressed tofu a locale entry

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -40,6 +40,7 @@ guar-pods-washed=Washed Guar Pods
 edamame=Edamame
 guarbeans=Guar Beans
 tofu-block=Tofu
+pressed-tofu=Pressed Tofu
 tempeh=Tempeh
 guar-meal=Guar Meal
 yuba=Yuba
@@ -191,6 +192,7 @@ wash-guar=Wash Guar Pods
 core-guar=Core Guar Pods
 ripen-edamame=Ripen Edamame
 press-guarbeans=Press Guar Beans
+press-tofu=Press Tofu
 guar-milk=Guar Milk
 tofu=Tofu
 render-cadaver-arum-fruit=Cadaver Arum Rendering
