Vrauk synthetic printing overhaul

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -229,8 +229,21 @@ vrauk-molting=Vrauk Molting
 vrauk-frass=Vrauk Frassing
 vrauk-molting-with-frass=Vrauk Molting with Frass
 vrauk-frass-to-formic-acid=Vrauk Frass to Formic Acid
-synthetic-vrauk-meat=Synthetic Vrauk Meat Printing
-synthetic-non-viable-vrauk-mass=Synthetic Non-viable Vrauk Mass
+synthetic-vrauk-meat-1=Synthetic Vrauk Meat Printing 1
+synthetic-vrauk-meat-2=Synthetic Vrauk Meat Printing 2
+synthetic-vrauk-meat-3=Synthetic Vrauk Meat Printing 3 
+synthetic-vrauk-meat-4=Synthetic Vrauk Meat Printing 4
+synthetic-non-viable-vrauk-mass-1=Synthetic Non-viable Vrauk Mass 1
+synthetic-non-viable-vrauk-mass-2=Synthetic Non-viable Vrauk Mass 2
+synthetic-non-viable-vrauk-mass-3=Synthetic Non-viable Vrauk Mass 3
+synthetic-non-viable-vrauk-mass-4=Synthetic Non-viable Vrauk Mass 4
+synthetic-non-viable-vrauk-mass-5=Synthetic Non-viable Vrauk Mass 5
+synthetic-non-viable-vrauk-mass-6=Synthetic Non-viable Vrauk Mass 6
+synthetic-non-viable-vrauk-mass-molt-1=Synthetic Non-viable Vrauk Mass with Molt 1
+synthetic-non-viable-vrauk-mass-molt-2=Synthetic Non-viable Vrauk Mass with Molt 2
+synthetic-non-viable-vrauk-mass-molt-3=Synthetic Non-viable Vrauk Mass with Molt 3
+synthetic-non-viable-vrauk-mass-molt-4=Synthetic Non-viable Vrauk Mass with Molt 4
+synthetic-non-viable-vrauk-mass-molt-5=Synthetic Non-viable Vrauk Mass with Molt 5
 render-non-viable-vrauk-mass=Full render Non-viable Vrauk Mass
 
 [recipe-description] 
