The big burlap sack update

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -73,6 +73,12 @@ vrauk-molt=Vrauk Molt
 vrauk-frass=Vrauk Frass
 non-viable-vrauk-mass=Non-viable Vrauk Mass
 
+molten-iron-stick=Molten Iron Stick
+needle=Sewing Needle
+sack=Burlap Sack
+burlap-cloth=Burlap Cloth
+string=String
+
 [item-description]
 pyv-hidden=This is supposed to be hidden. If you can read this, then another mod does not value my privacy.
 compostable=Compostable (yields __1__ biomass)
@@ -246,6 +252,12 @@ synthetic-non-viable-vrauk-mass-molt-4=Synthetic Non-viable Vrauk Mass with Molt
 synthetic-non-viable-vrauk-mass-molt-5=Synthetic Non-viable Vrauk Mass with Molt 5
 render-non-viable-vrauk-mass=Full render Non-viable Vrauk Mass
 
+molten-iron-stick=Heat Iron Stick
+needle=Needle
+sack=Burlap Sack
+burlap-cloth=Sew Burlap Cloth
+string=String Weaving
+
 [recipe-description] 
 grow-tiriscefing-willow-2=They love to eat this carbon gas. 
 process-tiriscefing-willow-bork=Vegoneal
@@ -285,6 +297,7 @@ growth-media=Growth Media
 plant-breeding=Plant Breeding
 cultivation-expertise=Cultivation Expertise
 pyveganism-biotechnology=Biotechnology
+fiber-refining=Fiber Refining
 
 [technology-description]
 biomass=Make use of those leftover plant residues. 
@@ -315,6 +328,7 @@ pyveganism-refresh-beacons-on-finished-research=Will likely cause a lag spike. O
 hidden-beacon=Hidden farm beacon
 composting-silo=Composting Silo
 bio-printer-mk00=Bioprinter MK 00
+ball-mill-mk00=Ball Mill MK 00
 
 [entity-description]
 composting-silo=Compostable organic matter will slowly turn into biomass inside it. It is bigger than a composter, but can reach higher composting rates.
