Cottongut NVM added

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -73,6 +73,8 @@ vrauk-molt=Vrauk Molt
 vrauk-frass=Vrauk Frass
 non-viable-vrauk-mass=Non-viable Vrauk Mass
 
+non-viable-cottongut-mass=Non-viable Cottongut Mass
+
 molten-iron-stick=Molten Iron Stick
 needle=Sewing Needle
 sack=Burlap Sack
@@ -102,6 +104,8 @@ protein=A wild mixture of polypeptides.
 vrauk-molt=The Once-was Exoskeleton of a Vrauk
 vrauk-frass=The poop of a Vrauk
 non-viable-vrauk-mass=Mass of Vrauk bits, unable to breathe or feel. Some diassembly required!
+
+non-viable-cottongut-mass=Mass of Cottongut bits, unable to breathe or feel. Some disassembly required!
 
 [fluid-name]
 solfaen=Rhodophyta Solfaen
@@ -251,6 +255,9 @@ synthetic-non-viable-vrauk-mass-molt-3=Synthetic Non-viable Vrauk Mass with Molt
 synthetic-non-viable-vrauk-mass-molt-4=Synthetic Non-viable Vrauk Mass with Molt 4
 synthetic-non-viable-vrauk-mass-molt-5=Synthetic Non-viable Vrauk Mass with Molt 5
 render-non-viable-vrauk-mass=Full render Non-viable Vrauk Mass
+
+synthetic-non-viable-cottongut-mass=Non-viable Cottongut Mass
+render-non-viable-cottongut-mass=Full render Non-viable Cottongut Mass
 
 molten-iron-stick=Heat Iron Stick
 needle=Needle
