Added blood drawing

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -73,6 +73,12 @@ vrauk-molt=Vrauk Molt
 vrauk-frass=Vrauk Frass
 non-viable-vrauk-mass=Non-viable Vrauk Mass
 
+non-viable-auog-mass=Non-viable Auog Mass 1
+syringe=Syringe
+used-syringe=Used Syringe
+
+reinforced-wooden-chest=Reinforced Wooden Chest
+
 molten-iron-stick=Molten Iron Stick
 needle=Sewing Needle
 sack=Burlap Sack
@@ -102,6 +108,8 @@ protein=A wild mixture of polypeptides.
 vrauk-molt=The Once-was Exoskeleton of a Vrauk
 vrauk-frass=The poop of a Vrauk
 non-viable-vrauk-mass=Mass of Vrauk bits, unable to breathe or feel. Some diassembly required!
+
+non-viable-auog-mass-1=Mass of Auog bits, unable to breathe or feel. Some diassembly required!
 
 [fluid-name]
 solfaen=Rhodophyta Solfaen
@@ -252,11 +260,20 @@ synthetic-non-viable-vrauk-mass-molt-4=Synthetic Non-viable Vrauk Mass with Molt
 synthetic-non-viable-vrauk-mass-molt-5=Synthetic Non-viable Vrauk Mass with Molt 5
 render-non-viable-vrauk-mass=Full render Non-viable Vrauk Mass
 
+synthetic-non-viable-auog-mass-1=Synthetic Non-viable Auog Mass 1
+render-non-viable-auog-mass=Full render Non-viable Auog Mass
+auog-blood-drive=Auog Blood Drive
+syringe=Syringe
+break-used-syringe=Break Used Syringe
+clean-syringe=Clean Used Syringe
+
 molten-iron-stick=Heat Iron Stick
 needle=Needle
 sack=Burlap Sack
 burlap-cloth=Sew Burlap Cloth
 string=String Weaving
+
+reinforced-wooden-chest=Reinforced Wooden Chest
 
 [recipe-description] 
 grow-tiriscefing-willow-2=They love to eat this carbon gas. 
@@ -297,7 +314,11 @@ growth-media=Growth Media
 plant-breeding=Plant Breeding
 cultivation-expertise=Cultivation Expertise
 pyveganism-biotechnology=Biotechnology
+
 fiber-refining=Fiber Refining
+
+syringe=Syringe
+auog-blood-drive=Auog Blood Drive
 
 [technology-description]
 biomass=Make use of those leftover plant residues. 
