Reworked how synthetic recipes work

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -261,6 +261,9 @@ synthetic-non-viable-vrauk-mass-molt-5=Synthetic Non-viable Vrauk Mass with Molt
 render-non-viable-vrauk-mass=Full render Non-viable Vrauk Mass
 
 synthetic-non-viable-auog-mass-1=Synthetic Non-viable Auog Mass 1
+synthetic-non-viable-auog-mass-2=Synthetic Non-viable Auog Mass 2
+synthetic-non-viable-auog-mass-3=Synthetic Non-viable Auog Mass 3
+synthetic-non-viable-auog-mass-4=Synthetic Non-viable Auog Mass 4
 render-non-viable-auog-mass=Full render Non-viable Auog Mass
 auog-blood-drive=Auog Blood Drive
 syringe=Syringe
