Fixed recipe names

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -268,7 +268,8 @@ render-non-viable-auog-mass=Full render Non-viable Auog Mass
 auog-blood-drive=Auog Blood Drive
 syringe=Syringe
 break-used-syringe=Break Used Syringe
-clean-syringe=Clean Used Syringe
+clean-syringe-1=Clean Used Syringe
+clean-syringe-2=Clean Used Syringe
 
 molten-iron-stick=Heat Iron Stick
 needle=Needle
