Blood printing done

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -264,6 +264,9 @@ synthetic-non-viable-auog-mass-1=Synthetic Non-viable Auog Mass 1
 synthetic-non-viable-auog-mass-2=Synthetic Non-viable Auog Mass 2
 synthetic-non-viable-auog-mass-3=Synthetic Non-viable Auog Mass 3
 synthetic-non-viable-auog-mass-4=Synthetic Non-viable Auog Mass 4
+synthetic-auog-blood-1=Synthetic Auog Blood Printing 1
+synthetic-auog-blood-2=Synthetic Auog Blood Printing 2
+synthetic-auog-blood-3=Synthetic Auog Blood Printing 3
 render-non-viable-auog-mass=Full render Non-viable Auog Mass
 auog-blood-drive=Auog Blood Drive
 syringe=Syringe
