Auog Approved Container program

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -78,6 +78,7 @@ syringe=Syringe
 used-syringe=Used Syringe
 
 reinforced-wooden-chest=Reinforced Wooden Chest
+auog-approved-reinforced-wooden-chest=Auog Approved Reinforced Wooden Chest
 
 hot-iron-stick=Hot Iron Stick
 needle=Sewing Needle
@@ -281,6 +282,7 @@ burlap-cloth=Sew Burlap Cloth
 string=String Weaving
 
 reinforced-wooden-chest=Reinforced Wooden Chest
+auog-approved-reinforced-wooden-chest=Auog Approved Reinforced Wooden Chest
 
 [recipe-description] 
 grow-tiriscefing-willow-2=They love to eat this carbon gas. 
