Auog Tuft integrated

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -76,6 +76,7 @@ non-viable-vrauk-mass=Non-viable Vrauk Mass
 non-viable-auog-mass=Non-viable Auog Mass 1
 syringe=Syringe
 used-syringe=Used Syringe
+auog-fur-tuft=Auog Fur Tuft
 
 reinforced-wooden-chest=Reinforced Wooden Chest
 auog-approved-reinforced-wooden-chest=Auog Approved Reinforced Wooden Chest
@@ -274,6 +275,8 @@ syringe=Syringe
 break-used-syringe=Break Used Syringe
 clean-syringe-1=Clean Used Syringe
 clean-syringe-2=Clean Used Syringe
+auog-fur-tuft-1=Auog Fur Tuft 1
+auog-fur-tuft-2=Auog Fur Tuft 2
 
 hot-iron-stick=Heat Iron Stick
 needle=Needle
@@ -282,7 +285,8 @@ burlap-cloth=Sew Burlap Cloth
 string=String Weaving
 
 reinforced-wooden-chest=Reinforced Wooden Chest
-auog-approved-reinforced-wooden-chest=Auog Approved Reinforced Wooden Chest
+auog-approved-reinforced-wooden-chest-1=Auog Approved Reinforced Wooden Chest
+auog-approved-reinforced-wooden-chest-2=Auog Approved Reinforced Wooden Chest
 
 [recipe-description] 
 grow-tiriscefing-willow-2=They love to eat this carbon gas. 
