--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -73,8 +73,8 @@ vrauk-molt=Vrauk Molt
 vrauk-frass=Vrauk Frass
 non-viable-vrauk-mass=Non-viable Vrauk Mass
 
-non-viable-cottongut-mass=Non-viable Cottongut Mass
-non-viable-auog-mass=Non-viable Auog Mass 1
+non-viable-cottongut-mass=Non-viable Cottongut mass
+non-viable-auog-mass=Non-viable Auog Mass
 
 syringe=Syringe
 used-syringe=Used Syringe
@@ -114,7 +114,7 @@ vrauk-frass=The poop of a Vrauk
 non-viable-vrauk-mass=Mass of Vrauk bits, unable to breathe or feel. Some diassembly required!
 
 non-viable-cottongut-mass=Mass of Cottongut bits, unable to breathe or feel. Some disassembly required!
-non-viable-auog-mass-1=Mass of Auog bits, unable to breathe or feel. Some diassembly required!
+non-viable-auog-mass=Mass of Auog bits, unable to breathe or feel. Some diassembly required!
 
 [fluid-name]
 solfaen=Rhodophyta Solfaen
@@ -265,7 +265,9 @@ synthetic-non-viable-vrauk-mass-molt-4=Synthetic Non-viable Vrauk Mass with Molt
 synthetic-non-viable-vrauk-mass-molt-5=Synthetic Non-viable Vrauk Mass with Molt 5
 render-non-viable-vrauk-mass=Full render Non-viable Vrauk Mass
 
-synthetic-non-viable-cottongut-mass=Non-viable Cottongut Mass
+synthetic-non-viable-cottongut-mass-1=Non-viable Cottongut Mass 1
+synthetic-non-viable-cottongut-mass-2=Non-viable Cottongut Mass 2
+synthetic-non-viable-cottongut-mass-3=Non-viable Cottongut Mass 3
 render-non-viable-cottongut-mass=Full render Non-viable Cottongut Mass
 
 synthetic-non-viable-auog-mass-1=Synthetic Non-viable Auog Mass 1
