Cottongut Fur Tufts

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -73,6 +73,8 @@ vrauk-molt=Vrauk Molt
 vrauk-frass=Vrauk Frass
 non-viable-vrauk-mass=Non-viable Vrauk Mass
 
+brush=Brush
+cottongut-fur-tuft=Cottongut Fur Tuft
 non-viable-cottongut-mass=Non-viable Cottongut mass
 non-viable-auog-mass=Non-viable Auog Mass
 
@@ -265,6 +267,8 @@ synthetic-non-viable-vrauk-mass-molt-4=Synthetic Non-viable Vrauk Mass with Molt
 synthetic-non-viable-vrauk-mass-molt-5=Synthetic Non-viable Vrauk Mass with Molt 5
 render-non-viable-vrauk-mass=Full render Non-viable Vrauk Mass
 
+cottongut-fur-tuft-1=Cotton Fur Tuft 1
+cottongut-fur-tuft-2=Cotton Fur Tuft 2
 synthetic-non-viable-cottongut-mass-1=Non-viable Cottongut Mass 1
 synthetic-non-viable-cottongut-mass-2=Non-viable Cottongut Mass 2
 synthetic-non-viable-cottongut-mass-3=Non-viable Cottongut Mass 3
