Filaments are done now!

--- a/locale/en/filament.cfg
+++ b/locale/en/filament.cfg
@@ -1,2 +1,4 @@
 [fluid-name]
-vrauk-filament=Vrauk Printing Resin
+vrauks-filament=Vrauk Printing Resin
+auog-filament=Auog Printing Resin
+cottongut-filament=Cottongut Printing Resin
