Initial arqad filament work

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -77,6 +77,7 @@ brush=Brush
 cottongut-fur-tuft=Cottongut Fur Tuft
 non-viable-cottongut-mass=Non-viable Cottongut mass
 non-viable-auog-mass=Non-viable Auog Mass
+non-viable-arqad-queen-mass=Non-viable Arqad Queen mass
 
 syringe=Syringe
 used-syringe=Used Syringe
@@ -117,6 +118,7 @@ non-viable-vrauks-mass=Mass of Vrauk bits, unable to breathe or feel. Some diass
 
 non-viable-cottongut-mass=Mass of Cottongut bits, unable to breathe or feel. Some disassembly required!
 non-viable-auog-mass=Mass of Auog bits, unable to breathe or feel. Some diassembly required!
+non-viable-arqad-queen-mass=Mass of Arqad Queen bits, unable to breathe or feel. Some diassembly required!
 
 [fluid-name]
 solfaen=Rhodophyta Solfaen
