--- a/locale/en/filament.cfg
+++ b/locale/en/filament.cfg
@@ -2,3 +2,10 @@
 vrauks-filament=Vrauk Printing Resin
 auog-filament=Auog Printing Resin
 cottongut-filament=Cottongut Printing Resin
+arqad-queen-filament=Arqad Queen Printing Resin
+arqad-filament=Arqad Printing Resin
+
+arqad-maggot-slurry-filament=Arqad Maggot Slurry Resin
+
+[recipe-name]
+arqad-queen-filament-from-filament=Arqad Maggot Slurry Resin from Arqad Queen Resin
