Rename to precursor instead of maggot slurry

--- a/locale/en/filament.cfg
+++ b/locale/en/filament.cfg
@@ -5,7 +5,7 @@ cottongut-filament=Cottongut Printing Resin
 arqad-queen-filament=Arqad Queen Printing Resin
 arqad-filament=Arqad Printing Resin
 
-arqad-maggot-slurry-filament=Arqad Maggot Slurry Resin
+arqad-precursor-filament=Arqad Precursor Resin
 
 [recipe-name]
-arqad-queen-filament-from-filament=Arqad Maggot Slurry Resin from Arqad Queen Resin
+arqad-queen-filament-from-filament=Arqad Precursor Resin from Arqad Queen Resin
