--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -308,6 +308,8 @@ sack=Burlap Sack
 burlap-cloth=Sew Burlap Cloth
 string=String Weaving
 
+render-non-viable-arqad-mass=Full render Non-viable Arqad Mass
+
 reinforced-wooden-chest=Reinforced Wooden Chest
 auog-approved-reinforced-wooden-chest-1=Auog Approved Reinforced Wooden Chest
 auog-approved-reinforced-wooden-chest-2=Auog Approved Reinforced Wooden Chest
