Ulrics done, I'm coming for you korlex

--- a/locale/en/filament.cfg
+++ b/locale/en/filament.cfg
@@ -2,10 +2,32 @@
 vrauks-filament=Vrauk Printing Resin
 auog-filament=Auog Printing Resin
 cottongut-filament=Cottongut Printing Resin
+ulric-filament=Ulric Printing Resin
 arqad-queen-filament=Arqad Queen Printing Resin
 arqad-filament=Arqad Printing Resin
 
 arqad-precursor-filament=Arqad Precursor Resin
 
+[item-name]
+non-viable-vrauks-mass=Non-viable Vrauk Mass
+non-viable-cottongut-mass=Non-viable Cottongut mass
+non-viable-auog-mass=Non-viable Auog Mass
+non-viable-ulric-mass=Non-viable Ulric mass
+non-viable-arqad-queen-mass=Non-viable Arqad Queen mass
+non-viable-arqad-mass=Non-viable Arqad mass
+
+[item-description]
+non-viable-vrauks-mass=Mass of Vrauk bits, unable to breathe or feel. Some diassembly required!
+non-viable-cottongut-mass=Mass of Cottongut bits, unable to breathe or feel. Some disassembly required!
+non-viable-auog-mass=Mass of Auog bits, unable to breathe or feel. Some diassembly required!
+non-viable-ulric-mass=Mass of Ulric bits, unable to breathe or feel. Some diassembly required!
+non-viable-arqad-queen-mass=Mass of Arqad Queen bits, unable to breathe or feel. Some diassembly required!
+non-viable-arqad-mass=Mass of Arqad bits, unable to breathe or feel. Some diassembly required!
+
 [recipe-name]
+render-non-viable-vrauks-mass=Full render Non-viable Vrauk Mass
+render-non-viable-cottongut-mass=Full render Non-viable Cottongut Mass
+render-non-viable-auog-mass=Full render Non-viable Auog Mass
+render-non-viable-ulric-mass=Full render Non-viable Ulric Mass
+render-non-viable-arqad-mass=Full render Non-viable Arqad Mass
 arqad-queen-filament-from-filament=Arqad Precursor Resin from Arqad Queen Resin
