--- a/locale/en/filament.cfg
+++ b/locale/en/filament.cfg
@@ -3,6 +3,7 @@ vrauks-filament=Vrauk Printing Resin
 auog-filament=Auog Printing Resin
 cottongut-filament=Cottongut Printing Resin
 ulric-filament=Ulric Printing Resin
+korlex-filament=Korlex Printing Resin
 arqad-queen-filament=Arqad Queen Printing Resin
 arqad-filament=Arqad Printing Resin
 
@@ -13,6 +14,7 @@ non-viable-vrauks-mass=Non-viable Vrauk Mass
 non-viable-cottongut-mass=Non-viable Cottongut mass
 non-viable-auog-mass=Non-viable Auog Mass
 non-viable-ulric-mass=Non-viable Ulric mass
+non-viable-korlex-mass=Non-viable Korlex mass
 non-viable-arqad-queen-mass=Non-viable Arqad Queen mass
 non-viable-arqad-mass=Non-viable Arqad mass
 
@@ -21,6 +23,7 @@ non-viable-vrauks-mass=Mass of Vrauk bits, unable to breathe or feel. Some diass
 non-viable-cottongut-mass=Mass of Cottongut bits, unable to breathe or feel. Some disassembly required!
 non-viable-auog-mass=Mass of Auog bits, unable to breathe or feel. Some diassembly required!
 non-viable-ulric-mass=Mass of Ulric bits, unable to breathe or feel. Some diassembly required!
+non-viable-korlex-mass=Mass of Korlex bits, unable to breathe or feel. Some diassembly required!
 non-viable-arqad-queen-mass=Mass of Arqad Queen bits, unable to breathe or feel. Some diassembly required!
 non-viable-arqad-mass=Mass of Arqad bits, unable to breathe or feel. Some diassembly required!
 
@@ -29,5 +32,6 @@ render-non-viable-vrauks-mass=Full render Non-viable Vrauk Mass
 render-non-viable-cottongut-mass=Full render Non-viable Cottongut Mass
 render-non-viable-auog-mass=Full render Non-viable Auog Mass
 render-non-viable-ulric-mass=Full render Non-viable Ulric Mass
+render-non-viable-korlex-mass=Full render Non-viable Korlex Mass
 render-non-viable-arqad-mass=Full render Non-viable Arqad Mass
 arqad-queen-filament-from-filament=Arqad Precursor Resin from Arqad Queen Resin
