--- a/locale/en/filament.cfg
+++ b/locale/en/filament.cfg
@@ -4,10 +4,16 @@ auog-filament=Auog Printing Resin
 cottongut-filament=Cottongut Printing Resin
 ulric-filament=Ulric Printing Resin
 korlex-filament=Korlex Printing Resin
+zipir1-filament=Zipir Printing Resin
 arqad-queen-filament=Arqad Queen Printing Resin
 arqad-filament=Arqad Printing Resin
 
 arqad-precursor-filament=Arqad Precursor Resin
+
+non-viable-zipir-fluid=Non-viable Zipir Fluid
+
+[fluid-description]
+non-viable-zipir-fluid=Emulsion of Zipir bits, unable to breathe or feel. Some diassembly required!
 
 [item-name]
 non-viable-vrauks-mass=Non-viable Vrauk Mass
@@ -17,6 +23,8 @@ non-viable-ulric-mass=Non-viable Ulric mass
 non-viable-korlex-mass=Non-viable Korlex mass
 non-viable-arqad-queen-mass=Non-viable Arqad Queen mass
 non-viable-arqad-mass=Non-viable Arqad mass
+
+unviable-zipir-eggs=Unviable Zipir egg
 
 [item-description]
 non-viable-vrauks-mass=Mass of Vrauk bits, unable to breathe or feel. Some diassembly required!
@@ -33,5 +41,6 @@ render-non-viable-cottongut-mass=Full render Non-viable Cottongut Mass
 render-non-viable-auog-mass=Full render Non-viable Auog Mass
 render-non-viable-ulric-mass=Full render Non-viable Ulric Mass
 render-non-viable-korlex-mass=Full render Non-viable Korlex Mass
+render-non-viable-zipir-mass=Full render Non-viable Zipir Fluid
 render-non-viable-arqad-mass=Full render Non-viable Arqad Mass
 arqad-queen-filament-from-filament=Arqad Precursor Resin from Arqad Queen Resin
