--- a/locale/en/filament.cfg
+++ b/locale/en/filament.cfg
@@ -1,5 +1,6 @@
 [fluid-name]
 vrauks-filament=Vrauk Printing Resin
+vrauks-mk02-filament=Vrauk Printing Resin
 auog-filament=Auog Printing Resin
 cottongut-filament=Cottongut Printing Resin
 ulric-filament=Ulric Printing Resin
