Fixed the locale

--- a/locale/en/filament.cfg
+++ b/locale/en/filament.cfg
@@ -1,6 +1,6 @@
 [fluid-name]
 vrauks-filament=Vrauk Printing Resin
-vrauks-mk02-filament=Vrauk Printing Resin
+vrauks-mk02-filament=Vrauk Printing Resin MK02
 auog-filament=Auog Printing Resin
 cottongut-filament=Cottongut Printing Resin
 ulric-filament=Ulric Printing Resin
