--- a/locale/en/filament.cfg
+++ b/locale/en/filament.cfg
@@ -6,6 +6,7 @@ vrauks-mk04-filament=Vrauk Printing Resin MK04
 
 auog-filament=Auog Printing Resin
 cottongut-filament=Cottongut Printing Resin
+cottongut-mk01-filament=Cottongut Stud Printing Resin
 ulric-filament=Ulric Printing Resin
 korlex-filament=Korlex Printing Resin
 zipir1-filament=Zipir Printing Resin
@@ -13,6 +14,8 @@ arqad-queen-filament=Arqad Queen Printing Resin
 arqad-filament=Arqad Printing Resin
 
 arqad-precursor-filament=Arqad Precursor Resin
+cottongut-chikawawa-filament=Cottongut Chikawawa Filament
+cottongut-mije-filament=Cottongut Mije Filament
 
 non-viable-zipir-fluid=Non-viable Zipir Fluid
 
@@ -22,6 +25,7 @@ non-viable-zipir-fluid=Emulsion of Zipir bits, unable to breathe or feel. Some d
 [item-name]
 non-viable-vrauks-mass=Non-viable Vrauk Mass
 non-viable-cottongut-mass=Non-viable Cottongut mass
+non-viable-cottongut-mk01-mass=Non-viable Cottongut Stud mass
 non-viable-auog-mass=Non-viable Auog Mass
 non-viable-ulric-mass=Non-viable Ulric mass
 non-viable-korlex-mass=Non-viable Korlex mass
@@ -33,6 +37,7 @@ unviable-zipir-eggs=Unviable Zipir egg
 [item-description]
 non-viable-vrauks-mass=Mass of Vrauk bits, unable to breathe or feel. Some diassembly required!
 non-viable-cottongut-mass=Mass of Cottongut bits, unable to breathe or feel. Some disassembly required!
+non-viable-cottongut-mk01-mass=Mass of Cottongut Stud bits, unable to breathe or feel. Some disassembly required!
 non-viable-auog-mass=Mass of Auog bits, unable to breathe or feel. Some diassembly required!
 non-viable-ulric-mass=Mass of Ulric bits, unable to breathe or feel. Some diassembly required!
 non-viable-korlex-mass=Mass of Korlex bits, unable to breathe or feel. Some diassembly required!
@@ -42,6 +47,7 @@ non-viable-arqad-mass=Mass of Arqad bits, unable to breathe or feel. Some diasse
 [recipe-name]
 render-non-viable-vrauks-mass=Full render Non-viable Vrauk Mass
 render-non-viable-cottongut-mass=Full render Non-viable Cottongut Mass
+render-non-viable-cottongut-mk01-mass=Full render Non-viable Cottongut Stud Mass
 render-non-viable-auog-mass=Full render Non-viable Auog Mass
 render-non-viable-ulric-mass=Full render Non-viable Ulric Mass
 render-non-viable-korlex-mass=Full render Non-viable Korlex Mass
