--- a/locale/en/filament.cfg
+++ b/locale/en/filament.cfg
@@ -16,6 +16,7 @@ arqad-filament=Arqad Printing Resin
 arqad-precursor-filament=Arqad Precursor Resin
 cottongut-chikawawa-filament=Cottongut Chikawawa Filament
 cottongut-mije-filament=Cottongut Mije Filament
+cottongut-monsi-filament=Cottongut Monsi Filament
 
 non-viable-zipir-fluid=Non-viable Zipir Fluid
 
