adds vegan manure route. slightly more input (~10%)for a smaller footprint. requires cDNA to bootstrap.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -147,6 +147,9 @@ activated-sludge=Activated Sludge
 sewage-sludge=Sewage Sludge
 marsh-gas=Marsh Gas
 
+digestive-bacteria=Aerobic Bacteria Colony
+bacterial-waste-suspension=Activated Sludge
+
 [recipe-name]
 grow-tiriscefing-willow-1=Grow tiriscefing willows
 grow-tiriscefing-willow-2=Grow tiriscefing willows
@@ -298,6 +301,11 @@ reinforced-wooden-chest=Reinforced Wooden Chest
 auog-approved-reinforced-wooden-chest-1=Auog Approved Reinforced Wooden Chest
 auog-approved-reinforced-wooden-chest-2=Auog Approved Reinforced Wooden Chest
 
+manure-from-waste-suspension=Manure From Activated Sludge
+bacterial-waste-creation=Bacterially Aided Decomposition
+breed-digestive-bacteria=Aerobic Bacterial Colony Reproduction
+engineer-digestive-bacteria=Aerobic Bacterial Colony Creation
+
 [recipe-description] 
 grow-tiriscefing-willow-2=They love to eat this carbon gas. 
 process-tiriscefing-willow-bork=Vegoneal
@@ -323,6 +331,11 @@ osmotic-stress-pemtenn=In an environment with high concentrations of sugar the o
 osmotic-stress-proxae=In an environment with high concentrations of sugar the osmotic pressure threatens to drain the water out of the cells. Proxae then tries to metabolize sugar to citric acid to lower the sugar concentration. 
 
 electronic-circuit-initial=Some wires and some logic.
+
+manure-from-waste-suspension=Evaporate waste solids from the activated sludge. Some bacteria are killed due to the thermal shock.
+bacterial-waste-creation=These bacteria, when supplied with an excess of oxygen, break down organic matter into a more useful form.
+breed-digestive-bacteria=Encourage reproduction of the bacterial colony by introducing easily digestible biomass.
+engineer-digestive-bacteria=Cultivate extremely specific bacteria to aid in the production of waste solids.
 
 [item-group-name]
 py-veganism=Py Veganism
