adds alternate vegan retrovirus recipes which use vrauk printing resin instead of vrauk cocoons.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -321,6 +321,8 @@ enrichment-culture-pseudodaemonas=There are alien bacteria in your blood.
 hunger-stress-morgenroete=When facing a lack of nutrients, these bacteria reduce themselves to a small but durable form that allowes them to survive extreme situations. 
 osmotic-stress-pemtenn=In an environment with high concentrations of sugar the osmotic pressure threatens to drain the water out of the cells. Pemtenn then tries to metabolize sugar to ethanol to lower the sugar concentration. 
 osmotic-stress-proxae=In an environment with high concentrations of sugar the osmotic pressure threatens to drain the water out of the cells. Proxae then tries to metabolize sugar to citric acid to lower the sugar concentration. 
+vegan-retrovirus=Retrovirus
+vegan-retrovirus-2=Retrovirus
 
 electronic-circuit-initial=Some wires and some logic.
 
