the fish update

--- a/locale/en/filament.cfg
+++ b/locale/en/filament.cfg
@@ -12,6 +12,7 @@ korlex-filament=Korlex Printing Resin
 zipir1-filament=Zipir Printing Resin
 arqad-queen-filament=Arqad Queen Printing Resin
 arqad-filament=Arqad Printing Resin
+fish-filament=Fish Printing Resin
 
 arqad-precursor-filament=Arqad Precursor Resin
 cottongut-chikawawa-filament=Cottongut Chikawawa Filament
@@ -19,9 +20,11 @@ cottongut-mije-filament=Cottongut Mije Filament
 cottongut-monsi-filament=Cottongut Monsi Filament
 
 non-viable-zipir-fluid=Non-viable Zipir Fluid
+non-viable-fish-fluid=Non-viable Fish Fluid
 
 [fluid-description]
-non-viable-zipir-fluid=Emulsion of Zipir bits, unable to breathe or feel. Some diassembly required!
+non-viable-zipir-fluid=Emulsion of Zipir bits, unable to breathe or feel. Some disassembly required!
+non-viable-fish-fluid=Emulsion of Fish bits, unable to breathe or feel. Some disassembly required!
 
 [item-name]
 non-viable-vrauks-mass=Non-viable Vrauk Mass
@@ -34,6 +37,7 @@ non-viable-arqad-queen-mass=Non-viable Arqad Queen mass
 non-viable-arqad-mass=Non-viable Arqad mass
 
 unviable-zipir-eggs=Unviable Zipir egg
+unviable-fish-egg=Unviable Fish Eggs
 
 [item-description]
 non-viable-vrauks-mass=Mass of Vrauk bits, unable to breathe or feel. Some diassembly required!
